--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Leave Request Form</title>
+  <title>GIS Leave Request Form</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; background-color: #f4f4f4; }
@@ -19,7 +19,7 @@
 <body>
 <div class="container">
   <h2>GEMS International School, Al Khail</h2>
-  <h2>GIS Leave Request Form</h2>
+  <h2>Leave Request Form</h2>
 
   <label for="email">Parent/Guardian Email registered with GIS</label>
   <input type="email" id="email" required>
