--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <div id="dismissalOptionContainer" style="display: none;">
         <label for="dismissalOption">Early Dismissal Plan</label>
-        <select id="dismissalOption" name="entry.1010113884" required>
+        <select id="dismissalOption" name="entry.1010113884">
           <option value="">Select</option>
           <option>Parent/Guardian will pick up the student from school</option>
           <option>Student will leave on their own after early dismissal</option>
@@ -137,19 +137,31 @@
     const seniorGrades = ['Grade 6','Grade 7','Grade 8','Grade 9','Grade 10','Grade 11','Grade 12'];
     const juniorGrades = ['PK','KG1','KG2','Grade 1','Grade 2','Grade 3','Grade 4','Grade 5'];
 
+    const existingHidden = document.querySelector('input[name="entry.1010113884"][type="hidden"]');
+    if (existingHidden) existingHidden.remove();
+
     if (leaveType === 'Early Dismissal') {
       dismissalContainer.style.display = 'block';
 
       if (juniorGrades.includes(grade)) {
+        alert("For Early Dismissal in lower grades, pickup by a parent or guardian is required.");
         dismissalSelect.value = "Parent/Guardian will pick up the student from school";
-        dismissalSelect.disabled = true;
+
+        let hiddenInput = document.createElement("input");
+        hiddenInput.type = "hidden";
+        hiddenInput.name = "entry.1010113884";
+        hiddenInput.value = "Parent/Guardian will pick up the student from school";
+        document.getElementById("leaveForm").appendChild(hiddenInput);
       } else {
-        dismissalSelect.disabled = false;
         dismissalSelect.value = "";
       }
+
     } else {
       dismissalContainer.style.display = 'none';
       dismissalSelect.value = "";
+
+      const existingHidden = document.querySelector('input[name="entry.1010113884"][type="hidden"]');
+      if (existingHidden) existingHidden.remove();
     }
   }
 
@@ -162,11 +174,11 @@
       }
     }
 
-    if (
-      document.getElementById('leaveType').value === 'Early Dismissal' &&
-      document.getElementById('dismissalOptionContainer').style.display !== 'none' &&
-      !document.getElementById('dismissalOption').value
-    ) {
+    const leaveType = document.getElementById('leaveType').value;
+    const dismissalVisible = document.getElementById('dismissalOptionContainer').style.display !== 'none';
+    const dismissalVal = document.getElementById('dismissalOption').value;
+
+    if (leaveType === 'Early Dismissal' && dismissalVisible && !dismissalVal) {
       alert("Please select the early dismissal plan.");
       return;
     }
