--- a/index.html
+++ b/index.html
@@ -50,14 +50,9 @@
         <option>Early Dismissal</option>
       </select>
 
-      <!-- Dismissal Plan -->
       <div id="dismissalOptionContainer" style="display: none;">
         <label for="dismissalOption">Early Dismissal Plan</label>
-        <select id="dismissalOption" name="entry.1010113884">
-          <option value="">Select</option>
-          <option>Parent/Guardian will pick up the student from school</option>
-          <option>Student will leave on their own after early dismissal</option>
-        </select>
+        <select id="dismissalOption" name="entry.1010113884"></select>
       </div>
 
       <label for="fromDate">From Date</label>
@@ -78,26 +73,30 @@
 </div>
 
 <script>
-  const API_URL = 'https://script.google.com/macros/s/AKfycbydNwIgNePZ5LBmfoH5OE9RkaZ_TjZDJcHqeuGUA1sXzAcxVqX8YkWKBrsRViZ6xlBD/exec';
-  const seniorGrades = ['Grade 6','Grade 7','Grade 8','Grade 9','Grade 10','Grade 11','Grade 12'];
+  const API_URL = 'https://script.google.com/macros/s/AKfycbwDPoMtmgI8nPA4LhjYYKcai6O4CFaXo8oQR-UcZqfe9xfu9zU4fYHcfUAeQy9wTOCkXA/exec';
   const juniorGrades = ['PK','KG1','KG2','Grade 1','Grade 2','Grade 3','Grade 4','Grade 5'];
 
   function validateEmail() {
     const email = document.getElementById('email').value.trim();
     const messageDiv = document.getElementById('loadingMessage');
+
     if (!email) {
       alert("Please enter your email.");
       return;
     }
+
     messageDiv.textContent = "🔄 Please wait whilst we validate the email against our records...";
+
     fetch(`${API_URL}?email=${encodeURIComponent(email)}`)
       .then(res => res.json())
       .then(data => {
         messageDiv.textContent = "";
+
         if (!data.students || data.students.length === 0) {
           alert("No students found for this email.");
           return;
         }
+
         const dropdown = document.getElementById('studentName');
         dropdown.innerHTML = '<option value="">Select Student</option>';
         data.students.forEach(stu => {
@@ -106,6 +105,7 @@
           option.textContent = stu.name;
           dropdown.appendChild(option);
         });
+
         document.getElementById('hiddenEmailField').value = email;
         document.getElementById('studentInfo').style.display = 'block';
       })
@@ -131,18 +131,25 @@
     const dismissalContainer = document.getElementById('dismissalOptionContainer');
     const dismissalSelect = document.getElementById('dismissalOption');
 
+    dismissalSelect.innerHTML = "";
+
     if (leaveType === 'Early Dismissal') {
+      dismissalContainer.style.display = 'block';
+
       if (juniorGrades.includes(grade)) {
-        dismissalContainer.style.display = 'none';
-        dismissalSelect.value = "Parent/Guardian will pick up the student from school";
+        dismissalSelect.innerHTML = `<option value="Parent/Guardian will pick up the student from school">Parent/Guardian will pick up the student from school</option>`;
+        dismissalSelect.disabled = true;
         alert("🚸 For students in lower grades, pickup by Parent/Guardian is required.");
       } else {
-        dismissalContainer.style.display = 'block';
-        dismissalSelect.value = "";
+        dismissalSelect.innerHTML = `
+          <option value="Parent/Guardian will pick up the student from school">Parent/Guardian will pick up the student from school</option>
+          <option value="Student will leave on their own after early dismissal">Student will leave on their own after early dismissal</option>`;
+        dismissalSelect.disabled = false;
       }
     } else {
       dismissalContainer.style.display = 'none';
-      dismissalSelect.value = "";
+      dismissalSelect.innerHTML = '';
+      dismissalSelect.disabled = false;
     }
   }
 
@@ -155,15 +162,12 @@
       }
     }
 
-    const leaveType = document.getElementById('leaveType').value;
-    const grade = document.getElementById('grade').value;
-    const dismissalSelect = document.getElementById('dismissalOption');
-
-    if (leaveType === 'Early Dismissal') {
-      if (seniorGrades.includes(grade) && !dismissalSelect.value) {
-        alert("Please select the early dismissal plan.");
-        return;
-      }
+    if (
+      document.getElementById('leaveType').value === 'Early Dismissal' &&
+      !document.getElementById('dismissalOption').value
+    ) {
+      alert("Please select the early dismissal plan.");
+      return;
     }
 
     alert("✅ Your leave request has been submitted. You will be notified via email.");
