--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         <option>Early Dismissal</option>
       </select>
 
-      <div id="dismissalOptionContainer" style="display: none;">
+      <div id="dismissalOptionContainer">
         <label for="dismissalOption">Early Dismissal Plan</label>
-        <select id="dismissalOption" name="entry.1010113884"></select>
+        <select id="dismissalOption" name="entry.1010113884" required></select>
       </div>
 
       <label for="fromDate">From Date</label>
@@ -73,110 +73,96 @@
 </div>
 
 <script>
-  const API_URL = 'https://script.google.com/macros/s/AKfycbydNwIgNePZ5LBmfoH5OE9RkaZ_TjZDJcHqeuGUA1sXzAcxVqX8YkWKBrsRViZ6xlBD/exec';
-  const juniorGrades = ['PK','KG1','KG2','Grade 1','Grade 2','Grade 3','Grade 4','Grade 5'];
+const API_URL = 'https://script.google.com/macros/s/AKfycbydNwIgNePZ5LBmfoH5OE9RkaZ_TjZDJcHqeuGUA1sXzAcxVqX8YkWKBrsRViZ6xlBD/exec';
 
-  function validateEmail() {
-    const email = document.getElementById('email').value.trim();
-    const messageDiv = document.getElementById('loadingMessage');
+function validateEmail() {
+  const email = document.getElementById('email').value.trim();
+  const messageDiv = document.getElementById('loadingMessage');
+  if (!email) return alert("Please enter your email.");
 
-    if (!email) {
-      alert("Please enter your email.");
-      return;
-    }
+  messageDiv.textContent = "🔄 Please wait whilst we validate the email against our records...";
+  fetch(`${API_URL}?email=${encodeURIComponent(email)}`)
+    .then(res => res.json())
+    .then(data => {
+      messageDiv.textContent = "";
+      if (!data.students || data.students.length === 0) return alert("No students found for this email.");
 
-    messageDiv.textContent = "🔄 Please wait whilst we validate the email against our records...";
-
-    fetch(`${API_URL}?email=${encodeURIComponent(email)}`)
-      .then(res => res.json())
-      .then(data => {
-        messageDiv.textContent = "";
-
-        if (!data.students || data.students.length === 0) {
-          alert("No students found for this email.");
-          return;
-        }
-
-        const dropdown = document.getElementById('studentName');
-        dropdown.innerHTML = '<option value="">Select Student</option>';
-        data.students.forEach(stu => {
-          const option = document.createElement('option');
-          option.value = JSON.stringify(stu);
-          option.textContent = stu.name;
-          dropdown.appendChild(option);
-        });
-
-        document.getElementById('hiddenEmailField').value = email;
-        document.getElementById('studentInfo').style.display = 'block';
-      })
-      .catch(err => {
-        messageDiv.textContent = "";
-        alert("Error validating email.");
+      const dropdown = document.getElementById('studentName');
+      dropdown.innerHTML = '<option value="">Select Student</option>';
+      data.students.forEach(stu => {
+        const option = document.createElement('option');
+        option.value = JSON.stringify(stu);
+        option.textContent = stu.name;
+        dropdown.appendChild(option);
       });
-  }
 
-  function autofillDetails() {
-    const selected = document.getElementById('studentName').value;
-    if (!selected) return;
-    const student = JSON.parse(selected);
-    document.getElementById('grade').value = student.grade;
-    document.getElementById('section').value = student.section;
-    document.getElementById('studentId').value = student.studentId;
-    handleDismissalOption();
-  }
+      document.getElementById('hiddenEmailField').value = email;
+      document.getElementById('studentInfo').style.display = 'block';
+    })
+    .catch(() => {
+      messageDiv.textContent = "";
+      alert("Error validating email.");
+    });
+}
 
-  function handleDismissalOption() {
-    const grade = document.getElementById('grade').value.trim();
-    const leaveType = document.getElementById('leaveType').value.trim();
-    const dismissalContainer = document.getElementById('dismissalOptionContainer');
-    const dismissalSelect = document.getElementById('dismissalOption');
+function autofillDetails() {
+  const selected = document.getElementById('studentName').value;
+  if (!selected) return;
+  const student = JSON.parse(selected);
+  document.getElementById('grade').value = student.grade;
+  document.getElementById('section').value = student.section;
+  document.getElementById('studentId').value = student.studentId;
+  handleDismissalOption();
+}
 
-    dismissalSelect.innerHTML = "";
+function handleDismissalOption() {
+  const grade = document.getElementById('grade').value.trim();
+  const leaveType = document.getElementById('leaveType').value.trim();
+  const dismissalSelect = document.getElementById('dismissalOption');
 
-    if (leaveType === 'Early Dismissal') {
-      dismissalContainer.style.display = 'block';
+  const lowerGrades = ['PK','KG1','KG2','Grade 1','Grade 2','Grade 3','Grade 4','Grade 5'];
+  const upperGrades = ['Grade 6','Grade 7','Grade 8','Grade 9','Grade 10','Grade 11','Grade 12'];
 
-      if (juniorGrades.includes(grade)) {
-        dismissalSelect.innerHTML = `<option value="Parent/Guardian will pick up the student from school">Parent/Guardian will pick up the student from school</option>`;
-        dismissalSelect.disabled = true;
-        alert("🚸 For students in lower grades, pickup by Parent/Guardian is required.");
-      } else {
-        dismissalSelect.innerHTML = `
-          <option value="Parent/Guardian will pick up the student from school">Parent/Guardian will pick up the student from school</option>
-          <option value="Student will leave on their own after early dismissal">Student will leave on their own after early dismissal</option>`;
-        dismissalSelect.disabled = false;
-      }
+  dismissalSelect.innerHTML = "";
+
+  if (leaveType === "Early Dismissal") {
+    if (lowerGrades.includes(grade)) {
+      dismissalSelect.innerHTML = '<option selected>Parent/Guardian will pick up the student from school</option>';
+      dismissalSelect.readOnly = true;
+      alert("Note: For grades PK–5, students must be picked up by a parent/guardian.");
     } else {
-      dismissalContainer.style.display = 'none';
-      dismissalSelect.innerHTML = '';
-      dismissalSelect.disabled = false;
+      dismissalSelect.readOnly = false;
+      dismissalSelect.innerHTML = `
+        <option value="Parent/Guardian will pick up the student from school">Parent/Guardian will pick up the student from school</option>
+        <option value="Student will leave on their own after early dismissal">Student will leave on their own after early dismissal</option>
+      `;
     }
+  } else {
+    dismissalSelect.innerHTML = '';
   }
+}
 
-  function handleSubmit() {
-    const requiredFields = ['studentName', 'studentId', 'grade', 'section', 'leaveType', 'fromDate', 'toDate', 'reason', 'hiddenEmailField'];
-    for (let id of requiredFields) {
-      if (!document.getElementById(id).value) {
-        alert('Please fill in all fields before submitting.');
-        return;
-      }
-    }
-
-    if (
-      document.getElementById('leaveType').value === 'Early Dismissal' &&
-      !document.getElementById('dismissalOption').value
-    ) {
-      alert("Please select the early dismissal plan.");
+function handleSubmit() {
+  const requiredFields = ['studentName', 'studentId', 'grade', 'section', 'leaveType', 'fromDate', 'toDate', 'reason', 'hiddenEmailField'];
+  for (let id of requiredFields) {
+    if (!document.getElementById(id).value) {
+      alert('Please fill in all fields before submitting.');
       return;
     }
-
-    alert("✅ Your leave request has been submitted. You will be notified via email.");
-    document.getElementById('leaveForm').submit();
-
-    setTimeout(() => {
-      window.location.reload();
-    }, 3000);
   }
+
+  if (
+    document.getElementById('leaveType').value === 'Early Dismissal' &&
+    !document.getElementById('dismissalOption').value
+  ) {
+    alert("Please select the early dismissal plan.");
+    return;
+  }
+
+  alert("✅ Your leave request has been submitted. You will be notified via email.");
+  document.getElementById('leaveForm').submit();
+  setTimeout(() => window.location.reload(), 3000);
+}
 </script>
 </body>
 </html>
