--- a/index.html
+++ b/index.html
@@ -50,9 +50,13 @@
         <option>Early Dismissal</option>
       </select>
 
-      <div id="dismissalOptionContainer">
+      <div id="dismissalOptionContainer" style="display: none;">
         <label for="dismissalOption">Early Dismissal Plan</label>
-        <select id="dismissalOption" name="entry.1010113884" required></select>
+        <select id="dismissalOption" name="entry.1010113884">
+          <option value="">Select</option>
+          <option>Parent/Guardian will pick up the student from school</option>
+          <option>Student will leave on their own after early dismissal</option>
+        </select>
       </div>
 
       <label for="fromDate">From Date</label>
@@ -73,96 +77,106 @@
 </div>
 
 <script>
-const API_URL = 'https://script.google.com/macros/s/AKfycbydNwIgNePZ5LBmfoH5OE9RkaZ_TjZDJcHqeuGUA1sXzAcxVqX8YkWKBrsRViZ6xlBD/exec';
+  const API_URL = 'https://script.google.com/macros/s/AKfycbydNwIgNePZ5LBmfoH5OE9RkaZ_TjZDJcHqeuGUA1sXzAcxVqX8YkWKBrsRViZ6xlBD/exec';
 
-function validateEmail() {
-  const email = document.getElementById('email').value.trim();
-  const messageDiv = document.getElementById('loadingMessage');
-  if (!email) return alert("Please enter your email.");
+  function validateEmail() {
+    const email = document.getElementById('email').value.trim();
+    const messageDiv = document.getElementById('loadingMessage');
 
-  messageDiv.textContent = "🔄 Please wait whilst we validate the email against our records...";
-  fetch(`${API_URL}?email=${encodeURIComponent(email)}`)
-    .then(res => res.json())
-    .then(data => {
-      messageDiv.textContent = "";
-      if (!data.students || data.students.length === 0) return alert("No students found for this email.");
-
-      const dropdown = document.getElementById('studentName');
-      dropdown.innerHTML = '<option value="">Select Student</option>';
-      data.students.forEach(stu => {
-        const option = document.createElement('option');
-        option.value = JSON.stringify(stu);
-        option.textContent = stu.name;
-        dropdown.appendChild(option);
-      });
-
-      document.getElementById('hiddenEmailField').value = email;
-      document.getElementById('studentInfo').style.display = 'block';
-    })
-    .catch(() => {
-      messageDiv.textContent = "";
-      alert("Error validating email.");
-    });
-}
-
-function autofillDetails() {
-  const selected = document.getElementById('studentName').value;
-  if (!selected) return;
-  const student = JSON.parse(selected);
-  document.getElementById('grade').value = student.grade;
-  document.getElementById('section').value = student.section;
-  document.getElementById('studentId').value = student.studentId;
-  handleDismissalOption();
-}
-
-function handleDismissalOption() {
-  const grade = document.getElementById('grade').value.trim();
-  const leaveType = document.getElementById('leaveType').value.trim();
-  const dismissalSelect = document.getElementById('dismissalOption');
-
-  const lowerGrades = ['PK','KG1','KG2','Grade 1','Grade 2','Grade 3','Grade 4','Grade 5'];
-  const upperGrades = ['Grade 6','Grade 7','Grade 8','Grade 9','Grade 10','Grade 11','Grade 12'];
-
-  dismissalSelect.innerHTML = "";
-
-  if (leaveType === "Early Dismissal") {
-    if (lowerGrades.includes(grade)) {
-      dismissalSelect.innerHTML = '<option selected>Parent/Guardian will pick up the student from school</option>';
-      dismissalSelect.readOnly = true;
-      alert("Note: For grades PK–5, students must be picked up by a parent/guardian.");
-    } else {
-      dismissalSelect.readOnly = false;
-      dismissalSelect.innerHTML = `
-        <option value="Parent/Guardian will pick up the student from school">Parent/Guardian will pick up the student from school</option>
-        <option value="Student will leave on their own after early dismissal">Student will leave on their own after early dismissal</option>
-      `;
-    }
-  } else {
-    dismissalSelect.innerHTML = '';
-  }
-}
-
-function handleSubmit() {
-  const requiredFields = ['studentName', 'studentId', 'grade', 'section', 'leaveType', 'fromDate', 'toDate', 'reason', 'hiddenEmailField'];
-  for (let id of requiredFields) {
-    if (!document.getElementById(id).value) {
-      alert('Please fill in all fields before submitting.');
+    if (!email) {
+      alert("Please enter your email.");
       return;
     }
+
+    messageDiv.textContent = "🔄 Please wait whilst we validate the email against our records...";
+
+    fetch(`${API_URL}?email=${encodeURIComponent(email)}`)
+      .then(res => res.json())
+      .then(data => {
+        messageDiv.textContent = "";
+
+        if (!data.students || data.students.length === 0) {
+          alert("No students found for this email.");
+          return;
+        }
+
+        const dropdown = document.getElementById('studentName');
+        dropdown.innerHTML = '<option value="">Select Student</option>';
+        data.students.forEach(stu => {
+          const option = document.createElement('option');
+          option.value = JSON.stringify(stu);
+          option.textContent = stu.name;
+          dropdown.appendChild(option);
+        });
+
+        document.getElementById('hiddenEmailField').value = email;
+        document.getElementById('studentInfo').style.display = 'block';
+      })
+      .catch(err => {
+        messageDiv.textContent = "";
+        alert("Error validating email.");
+      });
   }
 
-  if (
-    document.getElementById('leaveType').value === 'Early Dismissal' &&
-    !document.getElementById('dismissalOption').value
-  ) {
-    alert("Please select the early dismissal plan.");
-    return;
+  function autofillDetails() {
+    const selected = document.getElementById('studentName').value;
+    if (!selected) return;
+    const student = JSON.parse(selected);
+    document.getElementById('grade').value = student.grade;
+    document.getElementById('section').value = student.section;
+    document.getElementById('studentId').value = student.studentId;
+    handleDismissalOption();
   }
 
-  alert("✅ Your leave request has been submitted. You will be notified via email.");
-  document.getElementById('leaveForm').submit();
-  setTimeout(() => window.location.reload(), 3000);
-}
+  function handleDismissalOption() {
+    const grade = document.getElementById('grade').value.trim();
+    const leaveType = document.getElementById('leaveType').value.trim();
+    const dismissalContainer = document.getElementById('dismissalOptionContainer');
+    const dismissalSelect = document.getElementById('dismissalOption');
+
+    const juniorGrades = ['PK','KG1','KG2','Grade 1','Grade 2','Grade 3','Grade 4','Grade 5'];
+    const isEarlyDismissal = (leaveType === 'Early Dismissal');
+
+    if (isEarlyDismissal) {
+      dismissalContainer.style.display = 'block';
+
+      if (juniorGrades.includes(grade)) {
+        alert("For Primary students (PK to Grade 5), the dismissal plan is fixed to parent pickup.");
+        dismissalSelect.value = "Parent/Guardian will pick up the student from school";
+        dismissalSelect.disabled = true;
+      } else {
+        dismissalSelect.disabled = false;
+        dismissalSelect.value = "";
+      }
+    } else {
+      dismissalContainer.style.display = 'none';
+      dismissalSelect.value = "";
+    }
+  }
+
+  function handleSubmit() {
+    const requiredFields = ['studentName', 'studentId', 'grade', 'section', 'leaveType', 'fromDate', 'toDate', 'reason', 'hiddenEmailField'];
+    for (let id of requiredFields) {
+      if (!document.getElementById(id).value) {
+        alert('Please fill in all fields before submitting.');
+        return;
+      }
+    }
+
+    const leaveType = document.getElementById('leaveType').value;
+    const dismissalSelect = document.getElementById('dismissalOption');
+    if (leaveType === 'Early Dismissal' && !dismissalSelect.value) {
+      alert("Please select the early dismissal plan.");
+      return;
+    }
+
+    alert("✅ Your leave request has been submitted. You will be notified via email.");
+    document.getElementById('leaveForm').submit();
+
+    setTimeout(() => {
+      window.location.reload();
+    }, 3000);
+  }
 </script>
 </body>
 </html>
